@@ -4,6 +4,7 @@ ganv (1.4.3) unstable;
   * Fix unexpected node jumping when dragging new connections.
   * Preserve selection for quickly making several connections.
   * Dampen sprung layout energy over time to prevent oscillation.
+  * Add support for edges that do not constrain the layout.
   * Distinguish edge color from port color slighly.
   * Highlight connected edges on port hover.
   * Add support for PDF and PS export.
@@ -18,7 +19,7 @@ ganv (1.4.3) unstable;
   * Fix crash when destroying canvas.
   * Upgrade to waf 1.8.14
 
- -- David Robillard <d@drobilla.net>  Sun, 04 Oct 2015 21:23:59 -0400
+ -- David Robillard <d@drobilla.net>  Mon, 26 Oct 2015 13:30:01 -0400
 
 ganv (1.4.2) stable;
 
